css/main.css
body {
    background-color: rgb(107, 107, 107);

    font-family: Cantarell, sans-serif;
}

.curtain {
    z-index: 2;

    width: 100%;

    background-color: #FFF;
    box-shadow: 0 15px 30px #222;
}

.wrapper {
    width: 1000px;
    margin: 0 auto;
    margin-bottom: 200px;
}

.header {
    height: 200px;

    line-height: 100px;
}

.header > img {
    float: left;

    height: 180px;
    margin: 10px;

    border-radius: 50%;
}

.header > h1 {
    float: left;

    margin-top: 100px;
    margin-left: 20px;

    font-size: 3.5em;
}

.navbar {
    position: static;

    width: 1000px;
    height: 60px;

    border-radius: 5px;
    background-color: rgb(48, 186, 31);
    box-shadow: 3px 3px 2px #888;
}

.sticky {
    position: fixed;
    top: 5px;
}

.navbar_item {
    display: block;
    float: left;

    width: 20%;
    height: 60px;

    text-align: center;
    text-decoration: none;

    color: #FFF;

    font-size: 16px;
    line-height: 60px;
}

.navbar_item:hover {
    text-decoration: underline;

    border-radius: 5px;
    background-color: rgb(43, 159, 28);
}

.content {
    padding: 20px 30px;
}

.content > h2 {
    margin: 20px;

    font-size: 2.5em;
}

.content > p {
    margin: 10px 10px 0 10px;
}

footer {
    position: fixed;
    z-index: -1;
    right: 0;
    bottom: 0;
    left: 0;

    height: 200px;

    background-color: rgb(107, 107, 107);
}

.footer_content {
    height: 200px;
    margin: 0 auto;

    text-align: center;
    vertical-align: middle;

    color: #FFF;

    line-height: 200px;
}

.footer_content > a {
    margin: 20px;

    vertical-align: middle;
}

